AutoNode & src & isWindows
Rename Node -> AutoNode, menos confusao com o ficheiro do JJTree.
Movi as pastas tuner e JJTree para a pasta src, fica o source code todo
na mesma pasta.
Mudei os privilégios do cálculo do isWindows, dos privilégios do
ficheiro a ser executado, para os privilégios da pasta. Ao executar
dentro do IntelliJ estava a retornar null.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.class
-JJTree/*
-!JJTree/SyntacticAnalyser.jjt
-!JJTree/SimpleNode.java
-!JJTree/JJTreeRunner.sh
-!JJTree/JJTreeRunner.bat
+src/JJTree/*
+!src/JJTree/SyntacticAnalyser.jjt
+!src/JJTree/SimpleNode.java
+!src/JJTree/JJTreeRunner.sh
+!src/JJTree/JJTreeRunner.bat
 
 *.classpath
 *.project
